--- a/requirements.txt
+++ b/requirements.txt
@@ -5,3 +5,12 @@ torchtext==0.6.0
 torchvision==0.6.0
 tqdm
 transformers==3.0.2
+pandas==1.1
+wandb==0.12.16
+# scipy==1.2.1
+# scikit-learn==0.20.3
+# tensorflow==1.14.0
+# tensorflow-hub==0.3.0
+# tensorflow-text==0.1.0
+# bert-tensorflow==1.0.1
+# glog==0.3.1
